--- a/20170425/example_codes/001 Tensorflow Introduction.ipynb
+++ b/20170425/example_codes/001 Tensorflow Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -47,35 +47,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Construct computational graph\n",
+    "    Construct model/network\n",
+    "    TODO: preparing training data and construct model\n",
     "\"\"\"\n",
-    "# define variables\n",
-    "node1 = tf.placeholder(tf.float32)\n",
-    "node2 = tf.placeholder(tf.float32)\n",
+    "# prepare training data\n",
+    "x_train = [1,2,3,4]     # input data\n",
+    "y_train = [0,-1,-2,-3]  # label\n",
+    "\n",
+    "# Model parameters\n",
+    "W = tf.Variable([.3], tf.float32)\n",
+    "b = tf.Variable([-.3], tf.float32)\n",
+    "# Model input and output\n",
+    "x = tf.placeholder(tf.float32)\n",
+    "linear_model = W * x + b\n",
+    "y = tf.placeholder(tf.float32)\n",
+    "# loss\n",
+    "loss = tf.reduce_sum(tf.square(linear_model - y)) # sum of the squares\n",
+    "# optimizer\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
+    "train = optimizer.minimize(loss)\n",
+    "\n",
+    "# initialize variables\n",
+    "init = tf.global_variables_initializer()\n",
     "\n",
     "\"\"\"\n",
-    "Running graph in GPU\n",
+    "    Running graph in GPU\n",
+    "    TODO: running and updating model\n",
     "\"\"\"\n",
     "with tf.Session() as sess:    \n",
-    "    # Do your work (running model)\n",
-    "    print(sess.run(node1+node2, {node1:1.0, node2:2.0}))"
+    "    # session initialization\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    curr_W, curr_b, curr_loss  = sess.run([W, b, loss], {x:x_train, y:y_train})\n",
+    "    print(\"Initial W: %s b: %s loss: %s\"%(curr_W, curr_b, curr_loss))\n",
+    "    \n",
+    "    # training the model \n",
+    "    for i in range(1000):\n",
+    "        sess.run(train, {x:x_train, y:y_train})\n",
+    "    \n",
+    "    # evaluating model\n",
+    "    curr_W, curr_b, curr_loss  = sess.run([W, b, loss], {x:x_train, y:y_train})\n",
+    "    print(\"Final W: %s b: %s loss: %s\"%(curr_W, curr_b, curr_loss))"
    ]
   },
   {
@@ -86,6 +107,8 @@
    },
    "source": [
     "### 1. Tensor 종류 \n",
+    "  - constant, placeholder, variable\n",
+    "  \n",
     "#### 1.1 Constant (상수)\n",
     "  - 선언과 함께 초기화됨\n",
     "  - 값이 바뀌지 않음"
@@ -93,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -104,8 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Const_2:0\", shape=(), dtype=float32)\n",
-      "Tensor(\"Const_3:0\", shape=(), dtype=float32)\n"
+      "Tensor(\"Const:0\", shape=(), dtype=float32)\n",
+      "Tensor(\"Const_1:0\", shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -119,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -153,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,8 +187,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Placeholder_9:0\", dtype=float32)\n",
-      "Tensor(\"Placeholder_10:0\", dtype=float32)\n",
+      "Tensor(\"Placeholder:0\", dtype=float32)\n",
+      "Tensor(\"Placeholder_1:0\", dtype=float32)\n",
       "\n",
       "one input for node1:\n",
       "7.0\n",
@@ -213,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -224,11 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.          0.30000001  0.60000002  0.90000004]\n",
-      "\n",
-      "After chaning bias from 0.3 to 0.6\n",
-      "[-0.60000002]\n",
-      "[-0.30000001  0.          0.30000001  0.60000002]\n"
+      "[ 0.          0.30000001  0.60000002  0.90000004]\n"
      ]
     }
    ],
@@ -238,8 +257,7 @@
     "b = tf.Variable([-.3], tf.float32)\n",
     "x = tf.placeholder(tf.float32)\n",
     "linear_model = W * x + b # x * 0.3 - 0.3\n",
-    "\n",
-    "update_b = tf.assign(b, [-.6])\n",
+    "#update_b = tf.assign(b, [-.6])\n",
     "\n",
     "# 변수 (W, b) 초기화\n",
     "init = tf.global_variables_initializer()\n",
@@ -252,11 +270,19 @@
     "    print(sess.run(linear_model, {x:[1,2,3,4]}))\n",
     "    \n",
     "    # change variables\n",
-    "    \n",
-    "    print(\"\\nAfter chaning bias from 0.3 to 0.6\")\n",
-    "    print(sess.run(update_b))\n",
-    "    print(sess.run(linear_model, {x:[1,2,3,4]}))"
+    "    #print(\"\\nAfter chaning bias from 0.3 to 0.6\")\n",
+    "    #print(sess.run(update_b))\n",
+    "    #print(sess.run(linear_model, {x:[1,2,3,4]}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -267,14 +293,11 @@
    "source": [
     "### 2. Mathematic operation\n",
     " - reference:<br>\n",
-    " https://www.tensorflow.org/versions/r0.11/api_docs/python/math_ops/arithmetic_operators\n",
-    " https://www.tensorflow.org/versions/r0.11/api_docs/python/math_ops/basic_math_functions\n",
-    " https://www.tensorflow.org/versions/r0.11/api_docs/python/math_ops/matrix_math_functions\n",
-    " https://www.tensorflow.org/versions/r0.11/api_docs/python/math_ops/reduction\n",
+    " https://www.tensorflow.org/versions/master/api_guides/python/math_ops#Arithmetic_Operators\n",
     " - 주요 API (기본 연산) <br>\n",
     "     - tf.add(x,y): element-wise addition\n",
-    "     - tf.sub(x,y): element-wise subtraction\n",
-    "     - tf.mul(x,y): element-wise multiplication\n",
+    "     - tf.subtract(x,y): element-wise subtraction\n",
+    "     - tf.multiply(x,y): element-wise multiplication\n",
     "     - tf.scalar_mul(scalar, x): multipy a scalar to x\n",
     "     - tf.div(x,y): element-wise division \n",
     "     - tf.mod(x,y): element-wise remainder of division\n",
@@ -294,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,101 +325,208 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-5378c3eed147>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# element-wise addition (덧셈)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0madd_node3_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0madd_node3_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnode1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnode2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# element-wise multiplication (곱셈)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add_node3_1:  Tensor(\"Add:0\", shape=(), dtype=float32)\n",
+      "add_node3_2:  Tensor(\"add_1:0\", shape=(), dtype=float32)\n",
+      "mul_node4_1:  Tensor(\"Mul:0\", shape=(), dtype=float32)\n",
+      "mul_node4_2:  Tensor(\"mul_1:0\", shape=(), dtype=float32)\n",
+      "\n",
+      "sess.run(add_node3_1):  0.9\n",
+      "sess.run(add_node3_2):  0.9\n",
+      "sess.run(mul_node4_1):  0.18\n",
+      "sess.run(mul_node4_2):  0.18\n"
      ]
     }
    ],
    "source": [
+    "node1 = tf.constant(0.3)\n",
+    "node2 = tf.constant(0.6)\n",
+    "\n",
     "# element-wise addition (덧셈)\n",
     "add_node3_1 = tf.add(node1, node2)\n",
     "add_node3_2 = node1 + node2\n",
     "\n",
     "# element-wise multiplication (곱셈)\n",
-    "mult_node4_1 = tf.mul(node1, node2)\n",
-    "mult_node4_2 = node1 * node2\n",
+    "mul_node4_1 = tf.multiply(node1, node2)\n",
+    "mul_node4_2 = node1 * node2\n",
     "\n",
     "print(\"add_node3_1: \", add_node3_1)\n",
     "print(\"add_node3_2: \", add_node3_2)\n",
-    "print(\"mult_node4_1: \", mult_node4_1)\n",
-    "print(\"mult_node4_2: \", mult_node4_2)\n",
+    "print(\"mul_node4_1: \", mul_node4_1)\n",
+    "print(\"mul_node4_2: \", mul_node4_2)\n",
     "print(\"\")\n",
     "with tf.Session() as sess:\n",
-    "    print(\"sess.run(node3): \", sess.run(node3_1))\n",
-    "    print(\"sess.run(node3): \", sess.run(node3_2))"
+    "    print(\"sess.run(add_node3_1): \", sess.run(add_node3_1))\n",
+    "    print(\"sess.run(add_node3_2): \", sess.run(add_node3_2))\n",
+    "    print(\"sess.run(mul_node4_1): \", sess.run(mul_node4_1))\n",
+    "    print(\"sess.run(mul_node4_2): \", sess.run(mul_node4_2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
-    "#### Mathematic operation (산술 연산) with user typed inputs"
+    "#### 2.2 산술 연산"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.5\n",
-      "[ 4.  7.]\n"
+      "input matrix:\n",
+      "[[0 1]\n",
+      " [2 3]] \n",
+      "\n",
+      "sess.run(square_node2): \n",
+      " [[ 0.  1.]\n",
+      " [ 4.  9.]]\n"
      ]
     }
    ],
    "source": [
-    "node1 = tf.placeholder(tf.float32)\n",
-    "node2 = tf.placeholder(tf.float32)\n",
-    "adder_node = node1 + node2 # (=tf.add(node1, node2))\n",
+    "inp = np.arange(0,4).reshape(2,2)\n",
+    "node1 = tf.constant(inp, tf.float32)\n",
+    "print(\"input matrix:\")\n",
+    "print(inp, \"\\n\")\n",
+    "\n",
+    "# Computing suare values\n",
+    "square_node2 = tf.square(node1)\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "    print(sess.run(adder_node, {node1: 3, node2: 4.5}))\n",
-    "    print(sess.run(adder_node, {node1: [1,2], node2: [3,5]}))"
+    "    print(\"sess.run(square_node2): \\n\", sess.run(square_node2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 벡터/매트릭스 연산"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.5\n",
-      "[ 12.  21.]\n"
+      "input matrix:\n",
+      "[[-0.71693953  3.77481167]\n",
+      " [ 0.27593423  2.25580511]] \n",
+      "\n",
+      "sess.run(max_node2):  3.77481\n",
+      "sess.run(max_node2_1dim):  [ 0.27593422  3.77481174]\n",
+      "sess.run(max_node2_2dim):  [ 3.77481174  2.25580502]\n"
      ]
     }
    ],
    "source": [
-    "node1 = tf.placeholder(tf.float32)\n",
-    "node2 = tf.placeholder(tf.float32)\n",
-    "adder_node = node1 + node2 # (=tf.add(node1, node2))\n",
-    "out_node = adder_node * 3\n",
+    "inp = np.random.randn(2,2)\n",
+    "node1 = tf.constant(inp, tf.float32)\n",
+    "print(\"input matrix:\")\n",
+    "print(inp, \"\\n\")\n",
+    "\n",
+    "# finding maximum value\n",
+    "max_node2 = tf.reduce_max(node1)\n",
+    "max_node2_1dim = tf.reduce_max(node1, axis=0)\n",
+    "max_node2_2dim = tf.reduce_max(node1, axis=1)\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "    print(sess.run(out_node, {node1: 3, node2: 4.5}))\n",
-    "    print(sess.run(out_node, {node1: [1,2], node2: [3,5]}))"
+    "    print(\"sess.run(max_node2): \", sess.run(max_node2))\n",
+    "    print(\"sess.run(max_node2_1dim): \", sess.run(max_node2_1dim))\n",
+    "    print(\"sess.run(max_node2_2dim): \", sess.run(max_node2_2dim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Model Training\n",
+    "#### 3.1 Loss 정의\n",
+    " - cross-entropy loss, l2 normalization loss, hinge loss, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define ground-truth label\n",
+    "x = tf.placeholder(tf.float32)\n",
+    "true_label = tf.placeholder(tf.float32)\n",
+    "\n",
+    "W = tf.Variable([.3], tf.float32)\n",
+    "b = tf.Variable([-.3], tf.float32)\n",
+    "linear_model = W * x + b # x * 0.3 - 0.3\n",
+    "\n",
+    "# define regression loss\n",
+    "squared_diff = tf.square(linear_model - true_label)\n",
+    "loss = tf.reduce_sum(squared_diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2 모델 업데이트\n",
+    " - loss에 대한 파라미터의 gradient 계산\n",
+    " - gradient를 이용하여 모델 파라미터 업데이트\n",
+    "     - $\\theta=\\theta-learning\\_rate*d\\theta$\n",
+    " - 위의 작업은 optimizer를 이용하여 간단하게 구현 가능\n",
+    " - optimizer 종류\n",
+    "      - GradientDescentOptimizer, AdagradOptimizer, RMSPropOptimizer, AdamOptimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W: [ 0.30000001] b: [-0.30000001] loss: 23.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
+    "train = optimizer.minimize(loss)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    curr_W, curr_b, curr_loss, _ = \\\n",
+    "            sess.run([W,b,loss,train], {x:[1,2,3,4], true_label:[0,-1,-2,-3]})\n",
+    "    print(\"W: %s b: %s loss: %s\"%(curr_W, curr_b, curr_loss))"
    ]
   }
  ],
