--- a/20170425/solution/001 Tensorflow Introduction.ipynb
+++ b/20170425/solution/001 Tensorflow Introduction.ipynb
@@ -105,7 +105,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -145,14 +147,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Problem 3 매트릭스 곱셈\n",
     "  - [1 2] <br>\n",
@@ -169,7 +176,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -180,14 +189,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Problem 4 평균값 계산\n",
     "  - input (2-dim matrix): <br>\n",
@@ -202,7 +216,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -222,7 +238,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Problem 5 softmax 구현\n",
     "  - softmax$(x_i)=\\frac{\\exp^{x_i}}{\\sum_{j=1}^{K}\\exp^{x_i}}$"
@@ -232,7 +251,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -252,8 +273,7 @@
     "node1 = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: implement softmax\n",
-    "summation = tf.reduce_sum(tf.exp(node1), 1)\n",
-    "node2 = tf.multiply(tf.exp(node1), 1.0/summation)\n",
+    "node2 = \n",
     "\n",
     "with tf.Session() as sess:\n",
     "    inp = np.random.randn(1,10)\n",
@@ -266,7 +286,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -279,6 +301,8 @@
    },
    "source": [
     "#### Problem 6 L1 loss 정의\n",
+    "  - $y_i$: ground-truth label\n",
+    "  - $f(x_i)$: predicted label\n",
     "  - $L = \\sum_i{|y_i - f(x_i)|}$"
    ]
   },
@@ -302,6 +326,87 @@
     "\n",
     "# TODO: define L1 loss\n",
     "l1_loss = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "cross_entropy_loss = -tf.reduce_sum(labels * tf.log(preds), reduction_indices=[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "#### Problem 7 cross-entropy loss 정의\n",
+    "  - $y_i$: ground-truth label, one-hot vector\n",
+    "  - $f(x_i)$: predicted label\n",
+    "  - $L = -\\sum_i{y_i \\log(x_{i})}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input prediction:\n",
+      " [[ 0.11235787  0.8681087   0.05679359  0.63635814  0.40980719  0.03008798\n",
+      "   0.06585013  0.64491219  0.15743517  0.27741525]]\n",
+      "label:\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.] \n",
+      "\n",
+      "cross_entropy loss tensorflow: \n",
+      " [ 1.28223979]\n",
+      "cross_entropy loss using numpy: \n",
+      " [ 1.28223979]\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = tf.placeholder(tf.float32)\n",
+    "node2 = tf.placeholder(tf.float32)\n",
+    "\n",
+    "# TODO: implement cross-entropy loss\n",
+    "loss = -tf.reduce_sum(node2 * tf.log(node1), reduction_indices=[1])\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    inp = np.abs(np.random.randn(1,10))\n",
+    "    label = np.zeros(10)\n",
+    "    label[np.random.randint(10)] = 1.0\n",
+    "    print(\"input prediction:\\n\", inp)\n",
+    "    print(\"label:\\n\", label, \"\\n\")\n",
+    "    \n",
+    "    print(\"cross_entropy loss tensorflow: \\n\", sess.run(loss, {node1:inp, node2:label}))\n",
+    "    print(\"cross_entropy loss using numpy: \\n\", -np.sum(label*np.log(inp), 1))"
    ]
   }
  ],
