--- a/20170425/practice/001 Tensorflow Introduction.ipynb
+++ b/20170425/practice/001 Tensorflow Introduction.ipynb
@@ -367,30 +367,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input prediction:\n",
-      " [[ 0.11235787  0.8681087   0.05679359  0.63635814  0.40980719  0.03008798\n",
-      "   0.06585013  0.64491219  0.15743517  0.27741525]]\n",
-      "label:\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.] \n",
-      "\n",
-      "cross_entropy loss tensorflow: \n",
-      " [ 1.28223979]\n",
-      "cross_entropy loss using numpy: \n",
-      " [ 1.28223979]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "node1 = tf.placeholder(tf.float32)\n",
     "node2 = tf.placeholder(tf.float32)\n",
