Update example codes

--- a/20170425/example_codes/001 Tensorflow Introduction.ipynb
+++ b/20170425/example_codes/001 Tensorflow Introduction.ipynb
@@ -257,7 +257,7 @@
     "b = tf.Variable([-.3], tf.float32)\n",
     "x = tf.placeholder(tf.float32)\n",
     "linear_model = W * x + b # x * 0.3 - 0.3\n",
-    "#update_b = tf.assign(b, [-.6])\n",
+    "update_b = tf.assign(b, [-.6])  # 변수 값 변환\n",
     "\n",
     "# 변수 (W, b) 초기화\n",
     "init = tf.global_variables_initializer()\n",
@@ -270,16 +270,18 @@
     "    print(sess.run(linear_model, {x:[1,2,3,4]}))\n",
     "    \n",
     "    # change variables\n",
-    "    #print(\"\\nAfter chaning bias from 0.3 to 0.6\")\n",
-    "    #print(sess.run(update_b))\n",
-    "    #print(sess.run(linear_model, {x:[1,2,3,4]}))"
+    "    print(\"\\nAfter chaning bias from -0.3 to -0.6\") # linear_model = x * 0.3 - 0.6\n",
+    "    print(sess.run(update_b))\n",
+    "    print(sess.run(linear_model, {x:[1,2,3,4]}))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -310,7 +312,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### 2.1 기본 연산"
    ]
@@ -366,7 +371,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### 2.2 산술 연산"
    ]
@@ -375,7 +383,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -407,7 +417,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### 2.2 벡터/매트릭스 연산"
    ]
@@ -416,7 +429,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -454,14 +469,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 3. Model Training\n",
     "#### 3.1 Loss 정의\n",
@@ -472,7 +492,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -491,7 +513,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### 3.2 모델 업데이트\n",
     " - loss에 대한 파라미터의 gradient 계산\n",
@@ -506,7 +531,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
