--- a/20170425/practice/003 MNIST Multi-layer Softmax Regression.ipynb
+++ b/20170425/practice/003 MNIST Multi-layer Softmax Regression.ipynb
@@ -21,7 +21,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Problem 1\n",
     "  - linear 레이어의 weight를 normal distribution으로 초기화 하도록 구현\n",
