--- a/20170425/example_codes/003 MNIST Multi-layer Softmax Regression.ipynb
+++ b/20170425/example_codes/003 MNIST Multi-layer Softmax Regression.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -19,7 +21,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Load MNIST data"
    ]
@@ -28,7 +33,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -49,16 +56,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "### Model Construction Functions"
+    "### Model Construction Functions\n",
+    " - Network (3-hidden-layer softmax regression)\n",
+    "     - $h_1 = W_1^Tx+b_1$  (hidden dimension=128)\n",
+    "     - $h_2= W_2^Th_1+b_2$ (hidden dimension=32)\n",
+    "     - $h_3= W_3^Th_2+b_3$ (hidden dimension=number of label=10)\n",
+    "     - $\\hat{y} = \\text{softmax}(h_3)$\n",
+    " - Loss function\n",
+    "     - Cross-entropy loss\n",
+    "     - $-\\sum_k{y_{i,k}\\log{\\hat{y}_{i,k}}}$\n",
+    " - Optimization algorithm\n",
+    "     - gradient descent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -167,7 +189,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Main Function"
    ]
@@ -176,7 +201,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -194,7 +221,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
