--- a/20170425/practice/003 MNIST Multi-layer Softmax Regression.ipynb
+++ b/20170425/practice/003 MNIST Multi-layer Softmax Regression.ipynb
@@ -33,6 +33,7 @@
     "  \n",
     "### Problem 2\n",
     "  - relu 레이어 구현\n",
+    "      - relu = \n",
     "      - hint: \"relu\"을 tensorflow 홈페이지에서 검색\n",
     "  - 약 98% accuracy를 가지도록 파라미터 찾기\n",
     "\n",
