--- a/20170425/example_codes/003_Multi_layer_NN.ipynb
+++ b/20170425/example_codes/003_Multi_layer_NN.ipynb
@@ -256,7 +256,10 @@
     "        total_cost = 0\n",
     "\n",
     "        for i in range(total_batch):\n",
+    "            # batch 데이터를 가져옴\n",
     "            batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
+    "            \n",
+    "            # 모델 업데이트 수행\n",
     "            _, cost_val = sess.run([train_step, loss], \\\n",
     "                                   feed_dict={imgs: batch_xs, labels: batch_ys})\n",
     "            total_cost += cost_val\n",
