--- a/20170425/practice/002_Single_Layer_NN.ipynb
+++ b/20170425/practice/002_Single_Layer_NN.ipynb
@@ -25,12 +25,7 @@
     "deletable": true,
     "editable": true
    },
-   "source": [
-    "### Problem 1\n",
-    "  - learning rate 바꿔서 학습해보기 [0.99, 0.9, 0.1, 0.05, 0.01, 0.005, 0.001]\n",
-    "  - 10 epoch 학습 시 정확도 아래값과 유사한지 확인\n",
-    "      - [0.9215, 0.9251, 0.921, 0.9195, 0.903, 0.8914, 0.8537]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -100,7 +95,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
