--- a/20170425/solution/001 Tensorflow Introduction.ipynb
+++ b/20170425/solution/001 Tensorflow Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -10,12 +10,15 @@
    },
    "outputs": [],
    "source": [
+    "#-*- coding: utf-8 -*-\n",
     "%matplotlib inline\n",
     "\n",
     "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "\n"
    ]
   },
   {
@@ -72,45 +75,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input: \n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "Cube: \n",
+      "[[  1.   8.]\n",
+      " [ 27.  64.]]\n",
+      "Square Root: \n",
+      "[[ 1.          1.41421354]\n",
+      " [ 1.73205078  2.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: 변수 정의\n",
-    "node1 = \n",
+    "node1 = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: 세제곱수 계산\n",
-    "node2 = \n",
+    "node2 = tf.pow(node1, 3)\n",
     "\n",
     "# TODO: 제곱근 계산\n",
-    "node3 = \n",
+    "node3 = tf.sqrt(node1)\n",
     "\n",
     "inp = np.arange(1,5).reshape(2,2)\n",
-    "print(\"input: \\n\", inp)\n",
+    "print \"input: \\n\", inp\n",
     "\n",
     "init = tf.global_variables_initializer()\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
     "    \n",
     "    res1, res2 = sess.run([node2, node3], {node1:inp})\n",
-    "    print(\"세제곱수: \\n\", res1)\n",
-    "    print(\"제곱근: \\n\", res2)"
+    "    print \"Cube: \\n\", res1\n",
+    "    print \"Square Root: \\n\", res2"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -132,15 +140,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input A: \n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "input B: \n",
+      "[[3 4]\n",
+      " [5 6]]\n",
+      "A * B: \n",
+      "[array([[  3.,   8.],\n",
+      "       [ 15.,  24.]], dtype=float32)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: implement matrix element-wise multiplication"
+    "# TODO: 변수 정의\n",
+    "node1 = tf.placeholder(tf.float32)\n",
+    "node2 = tf.placeholder(tf.float32)\n",
+    "\n",
+    "# TODO: element-wise multiplcation\n",
+    "node3 = tf.multiply(node1, node2)\n",
+    "\n",
+    "inp  = np.arange(1,5).reshape(2,2)\n",
+    "inp2 = np.arange(3,7).reshape(2,2)\n",
+    "print \"input A: \\n\", inp\n",
+    "print \"input B: \\n\", inp2\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    res1 = sess.run([node3], {node1:inp, node2:inp2})\n",
+    "    print \"A * B: \\n\", res1"
    ]
   },
   {
@@ -174,15 +216,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input A: \n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "input B: \n",
+      "[[3 4]\n",
+      " [5 6]]\n",
+      "A * B: \n",
+      "[array([[ 13.,  16.],\n",
+      "       [ 29.,  36.]], dtype=float32)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: implement matrix multiplication"
+    "# TODO: 변수 정의\n",
+    "node1 = tf.placeholder(tf.float32)\n",
+    "node2 = tf.placeholder(tf.float32)\n",
+    "\n",
+    "# TODO: matrix multiplcation\n",
+    "node3 = tf.matmul(node1, node2)\n",
+    "\n",
+    "inp  = np.arange(1,5).reshape(2,2)\n",
+    "inp2 = np.arange(3,7).reshape(2,2)\n",
+    "print \"input A: \\n\", inp\n",
+    "print \"input B: \\n\", inp2\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    res1 = sess.run([node3], {node1:inp, node2:inp2})\n",
+    "    print \"A * B: \\n\", res1"
    ]
   },
   {
@@ -214,15 +290,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input: \n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]]\n",
+      "output1:  5.5\n",
+      "output2:  [[ 3.5  4.5  5.5  6.5  7.5]]\n",
+      "output3: \n",
+      "[[ 3.        ]\n",
+      " [ 8.00000095]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: implement 평균값 계산"
+    "# TODO: 변수 정의\n",
+    "node1 = tf.placeholder(tf.float32)\n",
+    "\n",
+    "# TODO: Calculate Average for all value\n",
+    "node2 = tf.reduce_mean(node1)\n",
+    "\n",
+    "# TODO: Calculate Average for each column\n",
+    "node3 = tf.reduce_mean(node1, 0, keep_dims=True)\n",
+    "\n",
+    "# TODO: Calculate Average for each row\n",
+    "node4 = tf.reduce_mean(node1, 1, keep_dims=True)\n",
+    "\n",
+    "inp  = np.arange(1,11).reshape(2,5)\n",
+    "print \"input: \\n\", inp\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    res1, res2, res3 = sess.run([node2, node3, node4], {node1:inp})\n",
+    "    print \"output1: \", res1\n",
+    "    print \"output2: \", res2\n",
+    "    print \"output3: \\n\", res3"
    ]
   },
   {
@@ -249,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,11 +375,11 @@
      "output_type": "stream",
      "text": [
       "softmax using tensorflow: \n",
-      " [[ 0.16992231  0.12765571  0.07094713  0.05544443  0.05057109  0.04449829\n",
-      "   0.06651492  0.35859632  0.0113751   0.04447464]]\n",
+      "[[ 0.07368489  0.01020653  0.0179082   0.03143091  0.05218411  0.39887774\n",
+      "   0.02413732  0.10023066  0.07753238  0.21380734]]\n",
       "softmax using numpy: \n",
-      " [[ 0.16992232  0.12765573  0.07094714  0.05544443  0.05057109  0.04449829\n",
-      "   0.06651492  0.35859633  0.0113751   0.04447465]]\n"
+      "[[ 0.07368488  0.01020653  0.0179082   0.03143091  0.05218411  0.39887769\n",
+      "   0.02413731  0.10023065  0.07753238  0.21380733]]\n"
      ]
     }
    ],
@@ -273,13 +387,13 @@
     "node1 = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: implement softmax\n",
-    "node2 = \n",
+    "node2 = tf.div(tf.exp(node1), tf.reduce_sum(tf.exp(node1)))\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    inp = np.random.randn(1,10)\n",
-    "    print(\"softmax using tensorflow: \\n\", sess.run(node2, {node1:inp}))\n",
+    "    print \"softmax using tensorflow: \\n\", sess.run(node2, {node1:inp})\n",
     "    #print(\"softmax using tensorflow: \\n\", sess.run(node2, {node1:inp}))\n",
-    "    print(\"softmax using numpy: \\n\", np.exp(inp) / np.sum(np.exp(inp), axis=1))"
+    "    print \"softmax using numpy: \\n\", np.exp(inp) / np.sum(np.exp(inp), axis=1)"
    ]
   },
   {
@@ -325,7 +439,7 @@
     "linear_model = W * x + b # f(x)\n",
     "\n",
     "# TODO: define L1 loss\n",
-    "l1_loss = "
+    "l1_loss = tf.reduce_sum(tf.abs(tf.subtract(true_label, linear_model)))"
    ]
   },
   {
@@ -341,13 +455,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-79aa3cb860ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcross_entropy_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction_indices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'labels' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cross_entropy_loss = -tf.reduce_sum(labels * tf.log(preds), reduction_indices=[1])"
    ]
@@ -367,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -379,15 +505,15 @@
      "output_type": "stream",
      "text": [
       "input prediction:\n",
-      " [[ 0.11235787  0.8681087   0.05679359  0.63635814  0.40980719  0.03008798\n",
-      "   0.06585013  0.64491219  0.15743517  0.27741525]]\n",
+      "[[ 0.57076103  1.205196    0.35827189  1.15277773  0.29856302  0.46777165\n",
+      "   1.15574465  0.90157554  0.30039495  0.30863809]]\n",
       "label:\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.] \n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  1.  0.] \n",
       "\n",
       "cross_entropy loss tensorflow: \n",
-      " [ 1.28223979]\n",
+      "[ 1.20265722]\n",
       "cross_entropy loss using numpy: \n",
-      " [ 1.28223979]\n"
+      "[ 1.20265717]\n"
      ]
     }
    ],
@@ -402,31 +528,41 @@
     "    inp = np.abs(np.random.randn(1,10))\n",
     "    label = np.zeros(10)\n",
     "    label[np.random.randint(10)] = 1.0\n",
-    "    print(\"input prediction:\\n\", inp)\n",
-    "    print(\"label:\\n\", label, \"\\n\")\n",
+    "    print \"input prediction:\\n\", inp \n",
+    "    print \"label:\\n\", label, \"\\n\" \n",
     "    \n",
-    "    print(\"cross_entropy loss tensorflow: \\n\", sess.run(loss, {node1:inp, node2:label}))\n",
-    "    print(\"cross_entropy loss using numpy: \\n\", -np.sum(label*np.log(inp), 1))"
+    "    print \"cross_entropy loss tensorflow: \\n\", sess.run(loss, {node1:inp, node2:label})\n",
+    "    print \"cross_entropy loss using numpy: \\n\", -np.sum(label*np.log(inp), 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
